# computervision

./: .gitignore  CMakeLists.txt  README.md  current.sh  install.sh  run.sh  sequence.sh
labs/: CMakeLists.txt
labs/ex_01/: CMakeLists.txt  ex_01.cpp
labs/ex_02/: CMakeLists.txt  ex_02.cpp
labs/ex_03/: CMakeLists.txt  ex_03.cpp
labs/ex_04/: CMakeLists.txt  ex_04.cpp
labs/ex_05/: CMakeLists.txt  ex_05.cpp
labs/ex_06/: CMakeLists.txt  ex_06.cpp
labs/ex_07/: CMakeLists.txt  ex_07.cpp
labs/ex_08/: CMakeLists.txt  ex_08.cpp
labs/ex_09/: CMakeLists.txt  ex_09.cpp
labs/ex_10/: CMakeLists.txt  ex_10.cpp
labs/ex_11/: CMakeLists.txt  ex_11.cpp
labs/ex_12/: CMakeLists.txt  ex_12.cpp
labs/ex_13/: CMakeLists.txt  ex_13.cpp
